[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AllenHarkSlipstream"
version = "0.1.0"
description = "Slipstream client SDK for Python - Solana transaction relay"
readme = "README.md"
requires-python = ">=3.9"
license = "Proprietary"
dependencies = [
    "aiohttp>=3.8.0",
    "grpcio>=1.50.0",
    "protobuf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/AllenHark-Inc/Slipstream"
