[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AllenHarkSlipstream"
version = "0.1.1"
description = "Slipstream client SDK for Python - Solana transaction relay"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["solana", "slipstream", "transaction", "relay", "blockchain", "web3"]
dependencies = [
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Repository = "https://github.com/AllenHark-Inc/slipstream-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/slipstream"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
